# llm

./: .gitignore  ch02.ipynb  ch03.ipynb  ch04.ipynb  ch05.ipynb  math500_base-cpu.jsonl  math500_base-mps.jsonl  pyproject.toml  qwen.ipynb  qwen3.py  requirements.txt  utils.py  utils_ch03.py  utils_ch04.py
legacy/: ch02.ipynb
