[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "sympy>=1.14.0",
    "tokenizers>=0.22.1",
    "torch>=2.9.0",
    "torchinfo>=1.8.0",
]
